Fix WalletDetails modal not aligned correctly

--- a/refactor/components/WalletButton.module.scss
+++ b/refactor/components/WalletButton.module.scss
@@ -38,6 +38,7 @@
 
 .modal {
 	height: 100%;
+	margin: 0 auto;
 }
 
 .modalInner {
